--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^3.2.2",
+    "angular-highcharts": "^6.2.6",
     "core-js": "^2.5.4",
+    "highcharts": "^6.1.3",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
@@ -30,6 +32,7 @@
     "@angular/cli": "~6.2.3",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/highcharts": "^5.0.29",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
